--- a/addons/loan_collection/views/collection_auto_examine_views.xml
+++ b/addons/loan_collection/views/collection_auto_examine_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record id="auto_examine_form" model="ir.ui.view">
-            <field name="name">自动审核配置</field>
+            <field name="name">Auto Review Configuration</field>
             <field name="model">collection.auto.examine</field>
             <field name="arch" type="xml">
                 <form>
@@ -13,9 +13,9 @@
                         </group>
                     </sheet>
                     <footer>
-                        <button name="action_confirm" string="确认" type="object"
+                        <button name="action_confirm" string="Submit" type="object"
                                 class="btn-primary"/>
-                        <button string="取消" class="btn-default" special="cancel"/>
+                        <button string="Cancel" class="btn-default" special="cancel"/>
                     </footer>
                 </form>
             </field>
