--- a/addons/loan_collection/views/collection_order_process_views.xml
+++ b/addons/loan_collection/views/collection_order_process_views.xml
@@ -185,18 +185,18 @@
                             <notebook>     
                                 <page string="Loan Record">
                                     <field name="loan_order_ids" readonly="1">  
-                                        <tree>  
-                                            <field name="order_no"/>
-                                            <field name="product_id" />  
-                                            <field name="contract_amount"/>  
-                                            <field name="loan_period" />  
-                                            <field name="pending_amount" />  
-                                            <field name="apply_time" />
-                                            <field name="repay_date" /> 
-                                            <field name="order_status" />
-                                            <field name="collection_stage_setting_id"/>  
-                                            <field name="overdue_days"/>     
-                                            <field name="collector_id" />  
+                                        <tree>
+                                            <field name="order_no" string="Order ID"/>
+                                            <field name="product_id" string="Product Name"/>
+                                            <field name="contract_amount" string="Contract Amount"/>
+                                            <field name="loan_period" string="Borrowing cycle"/>
+                                            <field name="pending_amount" string="Bill Amount"/>
+                                            <field name="apply_time" string="Application Date"/>
+                                            <field name="repay_date" string="Due Time of Repayment"/>
+                                            <field name="order_status" string="Order Status"/>
+                                            <field name="collection_stage_setting_id" string="Collection Stage"/>
+                                            <field name="overdue_days" string="Overdue Days"/>
+                                            <field name="collector_id" string="Collector"/>
                                         </tree>  
                                     </field> 
                                 </page>  
