--- a/addons/loan_financial/views/additional_record.xml
+++ b/addons/loan_financial/views/additional_record.xml
@@ -2,24 +2,24 @@
   <data>
     <!-- views -->
     <record model="ir.ui.view" id="form_additional_record">
-        <field name="name">补单记录表单</field>
+        <field name="name">Reorder Record Form</field>
         <field name="model">additional.record</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <group>
-                        <field name="repay_order_id" invisible="1" />
-                        <field name="order_id" invisible="1" />
-                        <field name="order_no" />
-                        <field name="order_user_id" />
-                        <field name='utr' required="1"/>
-                        <field name="amount" required="1"/>
-                        <field name="addition_type"  required="1"/>
-                        <field name="voucher_img" string="上传图片" required="1" />
+                        <field name="repay_order_id" string="Repayment Order" invisible="1" />
+                        <field name="order_id" string="Financial Order" invisible="1" />
+                        <field name="order_no" string="Order ID" />
+                        <field name="order_user_id" string="UserID"/>
+                        <field name='utr' required="1" string="UTR"/>
+                        <field name="amount" required="1" string="Reorder Amount"/>
+                        <field name="addition_type"  string="Business Category" required="1"/>
+                        <field name="voucher_img" string="Credentials" required="1" />
                     </group>
                     <footer>
-                        <button string="取消" class="btn btn-default" special="cancel"/>
-                        <button string="提交" special="save" class="oe_highlight"/>
+                        <button string="Cancel" class="btn btn-default" special="cancel"/>
+                        <button string="Submit" special="save" class="oe_highlight"/>
                     </footer>
                 </sheet>
             </form>
