--- a/addons/loan_financial/views/derate_record.xml
+++ b/addons/loan_financial/views/derate_record.xml
@@ -120,26 +120,26 @@
 
     <!-- wizard -->
     <record model="ir.ui.view" id="wizard_derate_setting">
-        <field name="name">减免记录配置向导</field>
+        <field name="name">Remission Record Configuration Wizard</field>
         <field name="model">derate.record.setting.wizard</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <group>
-                        <field name="auto_pass" widget="boolean_toggle"/>
-                        <field name="max_amount" invisible="not auto_pass" />
+                        <field name="auto_pass" string="Is Enable Automatic Review" widget="boolean_toggle"/>
+                        <field name="max_amount" string="Max Remission Amount" invisible="not auto_pass" />
                     </group>
                 </sheet>
                 <footer>
-                    <button string="取消" class="btn btn-default" special="cancel"/>
-                    <button string="确认" type="object" name="action_setting" class="oe_highlight"/>
+                    <button string="Cancel" class="btn btn-default" special="cancel"/>
+                    <button string="Submit" type="object" name="action_setting" class="oe_highlight"/>
                 </footer>
             </form>
         </field>
     </record>
 
     <record model="ir.ui.view" id="wizard_fin_derate_approval">
-        <field name="name">金额减免审核向导</field>
+        <field name="name">Review of Amount Remission Wizard</field>
         <field name="model">derate.record.approval.wizard</field>
         <field name="arch" type="xml">
             <form>
@@ -148,20 +148,20 @@
                         <field name="approval_type" invisible="1" />
                         <field name="derate_id" invisible="1"/>
                         <field name="approval_result" invisible="1" force_save="1"/>
-                        <field name="desc" string="申请减免金额" readonly="1"/>
-                        <field name="remark" />
+                        <field name="desc" string="Aplication of Amount Remission" readonly="1"/>
+                        <field name="remark" string="Remark"/>
                     </group>
                 </sheet>
                 <footer>
-                    <button string="取消" class="btn btn-default" special="cancel"/>
-                    <button string="确认" type="object" name="action_approval" class="oe_highlight"/>
+                    <button string="Cancel" class="btn btn-default" special="cancel"/>
+                    <button string="Submit" type="object" name="action_approval" class="oe_highlight"/>
                 </footer>
             </form>
         </field>
     </record>
 
     <record model="ir.ui.view" id="wizard_fin_derate_batch_approval">
-        <field name="name">金额减免批量审核</field>
+        <field name="name">Amount Remission Batch Review</field>
         <field name="model">derate.record.batch.approval.wizard</field>
         <field name="arch" type="xml">
             <form>
@@ -169,14 +169,14 @@
                     <group>
                         <field name="approval_type" invisible="1"/>
                         <field name="derate_record_ids" invisible="1" />
-                        <field name="desc" readonly="1" force_save="1"/>
-                        <field name="approval_result" widget="radio" options="{'horizontal': true}"/>
-                        <field name="remark"/>
+                        <field name="desc" string="The Selected Order Quantity" readonly="1" force_save="1"/>
+                        <field name="approval_result" string="Batch Review" widget="radio" options="{'horizontal': true}"/>
+                        <field name="remark" string="Remark"/>
                     </group>
                 </sheet>
                 <footer>
-                    <button string="取消" class="btn btn-default" special="cancel"/>
-                    <button string="确认" type="object" name="action_approval" class="oe_highlight"/>
+                    <button string="Cancel" class="btn btn-default" special="cancel"/>
+                    <button string="Submit" type="object" name="action_approval" class="oe_highlight"/>
                 </footer>
             </form>
         </field>
